Mon Mar  2 16:19:58 1998  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in: Integrate in the krb5 build tree rules.
	(use CC_LINK, etc).

	* configure.in: Add AC_BUILD_PROGRAM for test programs.

Wed Feb 18 16:33:38 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Wed Jan 28 17:58:10 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in, Makefile.in: Remove CopyHeader from
		configure.in, and move functionality to Makefile.in

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Fri Jan 23 20:55:06 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* prof_parse.c (parse_std_line, parse_quoted_string,
 	 	need_double_quotes, output_quoted_string, dump_profile,
 	 	dump_profile_to_file): Vastly improved the profile
	 	parsing; whitespace at the end of lines are now ignored.
		Added quoted string parsing, complete with backquote
	 	processing.  Strings which need to be quoted are properly
	 	quoted on output.

Sat Feb 22 18:33:17 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Move list file construction to win-post.in

Tue Feb 18 00:14:13 1997  Richard Basch  <basch@lehman.com>

	* profile.hin prof_int.h prof_init.c:
		Export profile_get_values() [krb4 dll requires it]

Sat Feb 15 01:58:19 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in (all-windows): Fixed win16/win32 build
		after libhack merge broke it...

Fri Feb  7 18:56:57 1997  Richard Basch  <basch@lehman.com>

	* prof_int.h:
		Include com_err.h rather than redefining errcode_t
		Structure element "magic" should not be errcode_t

Wed Feb  5 20:18:33 1997  Richard Basch  <basch@lehman.com>

	* profile.hin: Do not process the contents of profile.h
		(or the profile.hin subset) more than once.

	* test_parse.c:
		Do not include "com_err.h" (conflicting errcode_t definition)

	* Makefile.in:
		Fixed typo (all-max -> all-mac)
		Inconsistent colon usage; all-windows needed :: not :
