@@ -1,3 +1,11 @@
+1998-08-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* prof_tree.c (profile_delete_node_relation): Fix bug where
+		deleting a node would corrupt the linked list.
+		(profile_add_node): Fix another linked list corruption
+		problem where an insertion into the middle of the linked
+		list didn't update a previous link.  [krb5-libs/615]
+
 Mon Mar  2 16:19:58 1998  Ezra Peisach  <epeisach@mit.edu>
 
 	* Makefile.in: Integrate in the krb5 build tree rules.
